Fixes the agenda; row of elements should no longer jump.

--- a/css/main.css
+++ b/css/main.css
@@ -116,7 +116,6 @@ section h1 {
 }
 .progress-count label {
     display: block;
-    color: white;
     margin-top: 10px;
 }
 
@@ -124,10 +123,6 @@ section h1 {
 
 .agenda-reg-btn {
     margin: 35px;
-}
-
-.faq-reg-btn {
-    margin-top: -200px !important;
 }
 
 .btn-hero {
@@ -146,6 +141,7 @@ section h1 {
     color: #a9062a;
     border-color: #ffffff;
 }
+
 @media screen and (max-width: 599px) {
     .header-col {
         padding-top: 15px;
@@ -173,12 +169,25 @@ section h1 {
 #the-agenda {
     min-height: 0;
 }
+
 #the-goal,
 #the-challenge {
     padding-bottom: 20px;
 }
+
 .objective-item h1 {
     padding-bottom: 30px;
+    clear: inherit;
+}
+
+/** THE AGENDA **/
+
+.agenda-lead {
+    padding-bottom: 40px;
+}
+
+.gbm {
+    clear: left;
 }
 
 /** BACKGROUND INFO **/
@@ -215,7 +224,7 @@ section h1 {
 #faq {
     background-color: #ccc;
 }
-.faq-item {}
+/*.faq-item {}*/
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .faq-item {
         min-height: 200px;
